test: modernize and overhaul test suite for post-refactor architecture
Comprehensively rewrote the test suite to align with the new singleton, caching, and CLI execution paradigms. Removed brittle reflection hacks, global system property mutations, and deep API mocking in favor of robust native Jenkins testing.

Key improvements:
- Leveraged `JenkinsRule` and `SystemCredentialsProvider` for true sandboxed integration testing instead of over-mocking `ExtensionList`.
- Safely isolated static mocks (`BitwardenCli`, `SessionManager`) using Mockito `MockedStatic` within `try-with-resources` blocks to guarantee thread safety.
- Rewrote `CacheManagerTest` to validate Guava `LoadingCache` asynchronous reloading and proper exception swallowing.
- Maximized branch coverage on models, converters, and utilities using JUnit 5 `@ParameterizedTest`.
- Dropped low-ROI reflection tests (e.g., `DirectoryProviderTest`) in favor of high-value integration validation.